<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/previous_game"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:text="@string/previous"
        android:textSize="12sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/btn_background"
        android:textColor="@color/status_bar_color"/>

    <Button
        android:id="@+id/reset_game"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:text="@string/reset"
        android:textSize="12sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/btn_background"
        android:textColor="@color/status_bar_color"/>

    <Button
        android:id="@+id/next_game"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:text="@string/next"
        android:textSize="12sp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@drawable/btn_background"
        android:textColor="@color/status_bar_color"/>

</LinearLayout>